# reachy-mini-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml  pytest.ini  reachy.py  reachy_debug.py  reachy_elevenlabs.py  reachy_zenoh_patch.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: index.html
docs/assets/: site.css
tests/: conftest.py  test_integration.py  test_reachy.py  test_reachy_elevenlabs.py  test_smoke.py  test_zenoh_usage.py
