[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-mcp"
version = "0.1.0"
description = "Basic MCP for Reachy Mini"
requires-python = ">=3.13"
authors = [
    {name = "Artur Skowronski", email = "me@arturskowronski.com"}
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "reachy-mini",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools]
py-modules = ["reachy", "reachy_elevenlabs"]
